finished? for now...

--- a/css/it210.css
+++ b/css/it210.css
@@ -4,8 +4,30 @@
   * Design inspired by author of csszengarden.com/174/
 */
 
-.mainheader {
+/*
+  * Swatch:
+  * #c47e1b -golden orange
+  * #79e0e5
+*/
 
+body {
+  background-image: url(css/bg.png);
+  background-color: #eee;
+
+}
+
+header {
+  border-radius: 10px;
+  margin: 3px;
+  padding: 7px;
+}
+
+.mainheader {
+  background-color: #e8a647;
+}
+
+.subheader {
+    background-color: #4f4d4a;
 }
 
 .navbar {
@@ -21,13 +43,13 @@
   font-size: 10pt;
   font-family: sans-serif;
   text-align: center;
-  text-decoration: underline;
   font-style: italic;
-  color:
+  color: #c47e1b;
 }
 
 #thetitle {
-  background-color: @brand-success;
+  font-family: sans-serif;
+  color: #054754;
 }
 
 #subtitletext {
@@ -35,4 +57,28 @@
   font-family: cursive;
   text-align: center;
   font-style: italic;
+  color: #c47e1b;
+}
+
+.content-box {
+  background-color: #e8a647;
+  color: #054754;
+  margin: 3px;
+  padding: 7px;
+  border-radius: 10px;
+}
+
+.content-heading {
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: serif;
+}
+
+.content-image {
+  width: 400px;
+  height: inherit;
+}
+
+.it-nav {
+  background-color: #4f4d4a;
 }
